<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".recipe.RecipeFragment" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRecipeNameDb"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/recipeName_text"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/ingredientTitle_textView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/ingredientTitle"
                android:gravity="center_vertical"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvIngredientsDb"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:textSize="18dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/instructions_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/instructionsTitle"
                android:gravity="center_vertical"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvInstructionsDb"
                android:layout_width="match_parent"
                android:layout_height="245dp"
                android:textSize="18dp"
                android:text="TextView" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>