<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="7dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground"
    app:cardBackgroundColor="@color/yellow"
    app:cardElevation="3dp"
    app:contentPadding="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ellipsis_menu"
            android:layout_width="37dp"
            android:layout_height="49dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:contentDescription="@string/ellipsis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView2"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_vert_ellipsis" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toStartOf="@+id/ellipsis_menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp">

                <TextView
                    android:id="@+id/recipe_title"
                    android:layout_width="235dp"
                    android:layout_height="28dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="@string/recipeName_text"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/recipe_desc"
                    android:layout_width="234dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="4dp"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recipe_title" />

                <TextView
                    android:id="@+id/numServingsLabel_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/numServingsLabel_text"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recipe_desc"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/recipe_servings"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/numberServingValue_text"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.05"
                    app:layout_constraintStart_toEndOf="@+id/numServingsLabel_textView"
                    app:layout_constraintTop_toBottomOf="@+id/recipe_desc"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>